setup i18t for bottom tab labels

--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -12,6 +12,9 @@
     "close": "Close",
     "erase": "Remove",
     "unknownLocation": "Unknown",
+    "askTab": "Help",
+    "chatTab": "Chats",
+    "userTab": "User",
     "AppScreen": {
       "title": "Help Wanted",
       "message": "Do you want to see the details?"
