Replace the default alert with react Alert
details:
1. put helpscreen header
2. replaced alert with  react native Alert

--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -73,9 +73,13 @@
       "msgCardTitle": "Message",
       "askCases": "Request cases",
       "helpCases": "Help cases",
+      "acceptedTitle": "Assigned Request",
       "alreadyAccepted": "This has already been assigned",
+      "canceledTitle": "Canceled Request",
       "canceledByClient": "The client canceled it",
       "votes": "Votes",
+      "updateFailureTitle": "Update Failure",
+      "updateFailure": "failed during DB update",
     },
     "AccountEditScreen": {
       "header": "Change Profile",
@@ -83,8 +87,12 @@
       "nameLabel": "Username(requried)",
       "namePlaceholder": "Type username",
       "pickerTitle": "Choose an avatar",
-      "cancelPicker": "Canceled",
+      "cancelPickerTitle": "Cancel Selection",
+      "cancelPicker": "Picking avatar canceled",
+      "pickerErrorTitle": "Error Occurred",
       "pickerError": "Something is wrong",
+      "updateErrorTitle": "Update Failure",
+      "updateError": "Try again",
     },
     "ProfileScreen": {
       "header": "User Profile",
@@ -101,12 +109,19 @@
     "ChatScreen": {
       "header": "Chat",
       "pickerTitle": "Choose a photo to send",
+      "cancelPickerTitle": "Cancel Selection",
       "cancelPicker": "Canceled",
+      "pickerErrorTitle": "Error Occurred",
       "pickerError": "Something is wrong",
       "voteButton": "Vote for helper",
-      "cannotVote": "You can vote for yourself",
+      "cannotVoteTitle": "Vote Error",
+      "cannotVote": "You can't vote for yourself",
+      "votedTitle": "Vote Notification",
       "voted": "Voted",
-      "votedAlready": "Already voted" 
+      "votedAlreadyTitle": "Vote Error",
+      "votedAlready": "Already voted",
+      "updateErrorTitle": "업로드 오류",
+      "updateError": "다시 시도해 주세요", 
     },
     "ChatListScreen": {
       "header": "Chat List",
