--- a/app/src/i18n/ko.json
+++ b/app/src/i18n/ko.json
@@ -73,9 +73,13 @@
       "msgCardTitle": "요청 내용",
       "askCases": "도움 요청 내역",
       "helpCases": "도움 내역",
+      "acceptedTitle": "처리된 요청",
       "alreadyAccepted": "이미 처리된 요청입니다.",
+      "canceledTitle": "취소된 요청",
       "canceledByClient": "의뢰인이 요청을 취소했습니다.",
       "votes": "추천수",
+      "updateFailureTitle": "업데이트 오류",
+      "updateFailure": "DB 업데이트 중 오류가 발생했습니다",
     },
     "AccountEditScreen": {
       "header": "프로필 수정",
@@ -83,8 +87,12 @@
       "nameLabel": "닉네임(필수)",
       "namePlaceholder": "닉네임을 입력하세요",
       "pickerTitle": "아바타 사진을 선택하세요",
+      "cancelPickerTitle": "선택 취소",
       "cancelPicker": "아바타 선택이 취소됐습니다",
+      "pickerErrorTitle": "오류 발생",
       "pickerError": "문제가 발생했습니다",
+      "updateErrorTitle": "업데이트 오류",
+      "updateError": "다시 시도해 주세요",
     },
     "ProfileScreen": {
       "header": "사용자 프로필",
@@ -101,12 +109,19 @@
     "ChatScreen": {
       "header": "채팅",
       "pickerTitle": "보낼 사진을 선택하세요",
+      "cancelPickerTitle": "선택 취소",
       "cancelPicker": "사진 선택이 취소됐습니다",
+      "pickerErrorTitle": "오류 발생",
       "pickerError": "문제가 발생했습니다",
       "voteButton": "도움자 추천",
+      "cannotVoteTitle": "추천 오류",
       "cannotVote": "스스로 추천할 수 없습니다",
+      "votedTitle": "추천 알림",
       "voted": "도움자를 추천하였습니다",
+      "votedAlreadyTitle": "추천 오류",
       "votedAlready": "이미 추천하셨습니다",
+      "updateErrorTitle": "업로드 오류",
+      "updateError": "다시 시도해 주세요",
     },
     "ChatListScreen": {
       "header": "채팅 리스트",
