--- a/app/src/i18n/ko.json
+++ b/app/src/i18n/ko.json
@@ -126,7 +126,9 @@
     "ChatListScreen": {
       "header": "채팅 리스트",
       "search": "검색어를 입력하세요",
-      "refresh": "새로고침"
+      "refresh": "새로고침",
+      "askCases": "도움 받은 내역",
+      "helpCases": "도움 준 내역",
     },
   },
 }
