--- a/app/src/i18n/ko.json
+++ b/app/src/i18n/ko.json
@@ -130,5 +130,22 @@
       "askCases": "도움 받은 내역",
       "helpCases": "도움 준 내역",
     },
+    "SettingScreen": {
+      "header": "설정",
+      "howto": "앱 사용법",
+      "share": "앱 공유하기",
+      "facebookGroup": "도움 스토리",
+      "naverCafe": "이타인클럽 - 우리동네 도움 선순환운동",
+      "github": "소스코드 보기",
+      "setting": "설정",
+      "links": "바로가기",
+      "app": "앱 설정 (권한, 알림 등)",
+      "language": "사용 언어 설정",
+      "languageTitle": "언어 설정",
+      "languageText": "언어 변경은 추후 지원예정입니다",
+      "deleteAccount": "회원 탈퇴",
+      "deleteTitle": "회원 탈퇴",
+      "deleteText": "현재 탈퇴는 수동으로만 가능합니다. 관리자에게 요청하세요",
+    },
   },
 }
