correct en language

--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -120,15 +120,15 @@
       "voted": "Voted",
       "votedAlreadyTitle": "Vote Error",
       "votedAlready": "Already voted",
-      "updateErrorTitle": "업로드 오류",
-      "updateError": "다시 시도해 주세요", 
+      "updateErrorTitle": "Upload Error",
+      "updateError": "Try again", 
     },
     "ChatListScreen": {
       "header": "Chat List",
       "search": "Type keywords",
       "refresh": "Refresh",
-      "askCases": "Got Helped Cases",
-      "helpCases": "Helped Cases",
+      "askCases": "Got Helped",
+      "helpCases": "Helped",
     },
   },
 }
