now the avatar and name are updated when they are changed
used react navigation events: onWillFocus

--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -82,7 +82,7 @@
       "updateFailure": "failed during DB update",
     },
     "AccountEditScreen": {
-      "header": "Change Profile",
+      "header": "Change Avatar",
       "updateButton": "Confirm",
       "nameLabel": "Username(requried)",
       "namePlaceholder": "Type username",
