added two list items in settingscreen.
app evaluation and app version.
also included app download webpage when clicking share item

--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -143,6 +143,11 @@
       "language": "Change Language",
       "languageTitle": "Change Language",
       "languageText": "Changing language will be supported.",
+      "shareTitle": "Download App",
+      "version": "App Version 0.1.1(beta)",
+      "evaluate": "Evaluation App",
+      "evaluationTitle": "App Evaluation",
+      "evaluationText": "Coming soon",
       "signout": "Signout",
       "signoutTitle": "Sign Out",
       "signoutText": "Do you want to signout?",
