--- a/app/src/i18n/ko.json
+++ b/app/src/i18n/ko.json
@@ -143,6 +143,11 @@
       "language": "사용 언어 설정",
       "languageTitle": "언어 설정",
       "languageText": "언어 변경은 추후 지원예정입니다",
+      "shareTitle": "앱 다운로드",
+      "version": "앱 버전 0.1.1(베타버전)",
+      "evaluate": "앱 평가하기",
+      "evaluationTitle": "앱 평가",
+      "evaluationText": "아직 마켓, 스토어 배포 전입니다",
       "signout": "로그아웃",
       "signoutTitle": "로그아웃",
       "signoutText": "로그아웃 하시겠습니까?",
