corrected account name update problem and added new strings: cases
to get the number of ask/help cases, now just use snapshot size no
counting docs.

--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -6,6 +6,7 @@
     "minute": "Minute",
     "second": "Second",
     "case": "Case",
+    "cases": "Cases",
     "location": "Location",
     "confirm": "Confirm",
     "save": "Save",
