--- a/app/src/i18n/ko.json
+++ b/app/src/i18n/ko.json
@@ -6,6 +6,7 @@
     "minute": "분",
     "second": "초",
     "case": "건",
+    "cases": "건",
     "location": "지역",
     "confirm": "확인",
     "save": "저장",
