corrected counting problem of askcases and helpcases
it was due to using await.
state of askCount and helpCount was not resolved until they were saved
in state.
now the update function is called inside the then() function.

--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -146,7 +146,7 @@
       "languageText": "Changing language will be supported.",
       "shareTitle": "Download App",
       "version": "App Version 0.1.1(beta)",
-      "evaluate": "Evaluation App",
+      "evaluate": "Evaluate App",
       "evaluationTitle": "App Evaluation",
       "evaluationText": "Coming soon",
       "signout": "Signout",
