used willFocus event in helpscreen to update the notification
but when the screen is in helpscreen already, the nodification data is
not updated. no way to refresh the screen? it seems there is.

in debug node, notification works welll, but in release of ios, it is
not.
 - no notification when the app is foreground
 - no navigatino to helpscreen when app is backgroud
- app crashes when the app is closed

it is like the android case, too. when release mode the navigation did
not work.

--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -72,8 +72,8 @@
       "acceptMessage": "You will be connected to the client",
       "senderCardTitle": "Client Info",
       "msgCardTitle": "Message",
-      "askCases": "Requested cases",
-      "helpCases": "Helped cases",
+      "askCases": "Got Helped",
+      "helpCases": "Helped",
       "acceptedTitle": "Assigned Request",
       "alreadyAccepted": "This has already been assigned",
       "canceledTitle": "Canceled Request",
