created a new branch to test location verification
- setup googlemap
- installed react-native-maps, react-native-geocoding
when a user clicks location search, map is shown

need to show the area that user inputs

--- a/app/src/i18n/ko.json
+++ b/app/src/i18n/ko.json
@@ -111,6 +111,9 @@
       "acceptMessage": "정보를 업데이트 하시겠습니까?",
       "updateButton": "업데이트",
     },
+    "LocationScreen": {
+      "header": "동네인증",
+    },
     "ChatScreen": {
       "header": "채팅",
       "pickerTitle": "보낼 사진을 선택하세요",
