getting address to profile screen.. not yet
1. added gradle.properties with removing the password
2. added debug.keystore file

--- a/app/src/i18n/ko.json
+++ b/app/src/i18n/ko.json
@@ -112,7 +112,9 @@
       "updateButton": "업데이트",
     },
     "LocationScreen": {
-      "header": "동네인증",
+      "header": "동네 인증하기",
+      "currentAddress": "현재 동네 위치: ",
+      "verify": "인증하기",
     },
     "ChatScreen": {
       "header": "채팅",
