--- a/app/src/i18n/ko.json
+++ b/app/src/i18n/ko.json
@@ -113,7 +113,7 @@
     },
     "LocationScreen": {
       "header": "동네 인증하기",
-      "currentAddress": "현재 동네 위치: ",
+      "currentAddress": "현재 위치: ",
       "verify": "인증하기",
     },
     "ChatScreen": {
