moved the location permission requestion to location form
if the request failed, made not to move to the location screen.

--- a/app/src/i18n/ko.json
+++ b/app/src/i18n/ko.json
@@ -149,12 +149,12 @@
       "github": "소스코드 보기",
       "setting": "설정",
       "links": "바로가기",
-      "app": "앱 설정 (권한, 알림 등)",
+      "app": "앱 설정 (위치, 알림 등)",
       "language": "사용 언어 설정",
       "languageTitle": "언어 설정",
       "languageText": "언어 변경은 추후 지원예정입니다",
       "shareTitle": "앱 다운로드",
-      "version": "앱 버전 0.1.1(베타버전)",
+      "version": "앱 버전 0.1.2(베타버전)",
       "evaluate": "앱 평가하기",
       "evaluationTitle": "앱 평가",
       "evaluationText": "아직 마켓, 스토어 배포 전입니다",
