--- a/app/src/i18n/ko.json
+++ b/app/src/i18n/ko.json
@@ -110,11 +110,15 @@
       "locationPlaceholder": "예: 수원 영통구",
       "acceptMessage": "정보를 업데이트 하시겠습니까?",
       "updateButton": "업데이트",
+      "deleteLocation": "지역 삭제",
+      "deleteLocationText": "선택한 지역을 삭제하시겠습니까?",
     },
     "LocationScreen": {
       "header": "동네 인증하기",
       "currentAddress": "현재 위치: ",
       "verify": "인증하기",
+      "permissionFail": "허가 획득 실패",
+      "permissionFailText": "동네 인증을 하려면 위치 허가가 필요합니다.",
     },
     "ChatScreen": {
       "header": "채팅",
