created a new function to update skills on db
also included english for location verification

--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -109,7 +109,16 @@
       "locationDesc": "Add up to 2 locations",
       "locationPlaceholder": "e.g. Marylebone, London",
       "acceptMessage": "Do you want to update?",
-      "updateButton": "Update",
+      "updateButton": "Update Blockchain",
+      "deleteLocation": "Delete Location",
+      "deleteLocationText": "Do you want to delete the location?",
+    },
+    "LocationScreen": {
+      "header": "Location Verification",
+      "currentAddress": "Location: ",
+      "verify": "Verify",
+      "permissionFail": "Permission denied",
+      "permissionFailText": "Location permission is needed to verify the location",
     },
     "ChatScreen": {
       "header": "Chat",
@@ -149,7 +158,7 @@
       "languageTitle": "Change Language",
       "languageText": "Changing language will be supported.",
       "shareTitle": "Download App",
-      "version": "App Version 0.1.1(beta)",
+      "version": "App Version 0.1.2(beta)",
       "evaluate": "Evaluate App",
       "evaluationTitle": "App Evaluation",
       "evaluationText": "Coming soon",
