re-created icon and splash images
changed android app name to HelpUs

--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -158,7 +158,7 @@
       "languageTitle": "Change Language",
       "languageText": "Changing language will be supported.",
       "shareTitle": "Download App",
-      "version": "App Version 0.1.2(beta)",
+      "version": "App Version 0.1.3",
       "evaluate": "Evaluate App",
       "evaluationTitle": "App Evaluation",
       "evaluationText": "Coming soon",
