--- a/app/src/i18n/ko.json
+++ b/app/src/i18n/ko.json
@@ -1,6 +1,6 @@
 {
   "translation": {
-    "title": "이타인클럽",
+    "title": "HelpUs",
     "yes": "예",
     "no": "아니오",
     "minute": "분",
@@ -58,7 +58,7 @@
       "votes": "추천수",
     },
     "AskScreen": {
-      "header": "이티인클럽",
+      "header": "HelpUs",
       "button": "도움 요청하기",
       "guideText": "요청 메시지를 입력하세요",
       "placeholder": "도움 요청 예: 컴퓨터 전원 버튼을 눌러도 켜지지 않습니다. 도와주세요.",
@@ -158,7 +158,7 @@
       "languageTitle": "언어 설정",
       "languageText": "언어 변경은 추후 지원예정입니다",
       "shareTitle": "앱 다운로드",
-      "version": "앱 버전 0.1.2(베타버전)",
+      "version": "앱 버전 0.1.3",
       "evaluate": "앱 평가하기",
       "evaluationTitle": "앱 평가",
       "evaluationText": "아직 마켓, 스토어 배포 전입니다",
