updated location verification
now the verification count is updated
after updating, the location edit is closed

--- a/app/src/i18n/ko.json
+++ b/app/src/i18n/ko.json
@@ -106,13 +106,13 @@
       "skillDomainDesc": "도움 줄 수 있는 분야(5개)를 추가합니다",
       "appendButton": "추가",
       "skillPlaceholder": "예: 안드로이드 앱 설치",
-      "location": "활동지역",
+      "location": "활동지역 인증",
       "locationDesc": "활동 지역 최대 2개를 추가합니다",
       "locationPlaceholder": "예: 수원 영통구",
       "acceptMessage": "정보를 업데이트 하시겠습니까?",
       "updateButton": "블록체인 업데이트",
       "deleteLocation": "지역 삭제",
-      "deleteLocationText": "선택한 지역을 삭제하시겠습니까?",
+      "deleteLocationText": "지역인증이 초기화됩니다. 선택한 지역을 삭제하시겠습니까?",
     },
     "LocationScreen": {
       "header": "동네 인증하기",
