--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -16,6 +16,8 @@
     "askTab": "Help",
     "chatTab": "Chats",
     "userTab": "User",
+    "korean": "한글",
+    "english": "English",
     "AppScreen": {
       "title": "Help Wanted",
       "message": "Do you want to see the details?"
@@ -153,9 +155,9 @@
       "setting": "Settings",
       "links": "Links",
       "app": "App Settings (permission, notification, etc)",
-      "language": "Change Language",
-      "languageTitle": "Change Language",
-      "languageText": "Changing language will be supported.",
+      "language": "사용 언어 변경",
+      "languageTitle": "언어 설정",
+      "languageText": "언어를 선택하세요",
       "shareTitle": "Download App",
       "version": "App Version 0.1.3",
       "evaluate": "Evaluate App",
