--- a/app/src/i18n/ko.json
+++ b/app/src/i18n/ko.json
@@ -125,7 +125,7 @@
     },
     "UsersScreen": {
       "header": "우리 동네 헬퍼스",
-      "currentAddress": "현재 위치: ",
+      "location": "지역: ",
       "permissionFail": "허가 획득 실패",
       "permissionFailText": "동네 인증을 하려면 위치 허가가 필요합니다.",
     },
