--- a/app/src/i18n/ko.json
+++ b/app/src/i18n/ko.json
@@ -16,6 +16,7 @@
     "askTab": "도움요청",
     "chatTab": "채팅",
     "userTab": "사용자",
+    "settingTab": "설정",
     "korean": "한글",
     "english": "English",
     "AppScreen": {
