implemented to find different lang users
used google geocoding api directly

--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -129,6 +129,8 @@
       "location": "Region: ",
       "permissionFail": "Permission denied",
       "permissionFailText": "Location permission is needed to verify the location",
+      "noresult": "No Results",
+      "multiLang": "include other languages",
     },
     "ChatScreen": {
       "header": "Chat",
