--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -130,7 +130,7 @@
       "permissionFail": "Permission denied",
       "permissionFailText": "Location permission is needed to verify the location",
       "noresult": "No Results",
-      "multiLang": "include other languages",
+      "multiLang": "other languages",
     },
     "ChatScreen": {
       "header": "Chat",
@@ -170,7 +170,7 @@
       "languageTitle": "언어 설정",
       "languageText": "언어를 선택하세요",
       "shareTitle": "Download App",
-      "version": "App Version 0.1.3",
+      "version": "App Version 0.2.0",
       "evaluate": "Evaluate App",
       "evaluationTitle": "App Evaluation",
       "evaluationText": "Coming soon",
