--- a/app/src/i18n/ko.json
+++ b/app/src/i18n/ko.json
@@ -163,6 +163,7 @@
       "facebookGroup": "도움 스토리",
       "naverCafe": "이타인클럽 - 우리동네 도움 선순환운동",
       "github": "소스코드 보기",
+      "terms": "이용약관 및 개인정보 보호 정책",
       "setting": "설정",
       "links": "바로가기",
       "app": "앱 설정 (위치, 알림 등)",
@@ -180,6 +181,14 @@
       "deleteAccount": "회원 탈퇴",
       "deleteTitle": "회원 탈퇴",
       "deleteText": "현재 탈퇴는 수동으로만 가능합니다. 관리자에게 요청하세요"
+    },
+    "LanguageScreen": {
+      "header": "언어 설정",
+      "primary": "사용 언어",
+      "others": "추가 언어",
+      "all": "모든 언어",
+      "korean": "한글",
+      "english": "English"
     }
   }
 }
