--- a/app/src/i18n/ko.json
+++ b/app/src/i18n/ko.json
@@ -169,11 +169,11 @@
       "setting": "설정",
       "links": "바로가기",
       "app": "앱 설정 (위치, 알림 등)",
-      "language": "Change Language",
-      "languageTitle": "Change Language",
-      "languageText": "Select language",
+      "language": "언어 설정",
+      "languageTitle": "언어 변경",
+      "languageText": "언어 선택",
       "shareTitle": "앱 다운로드",
-      "version": "앱 버전 0.2.0",
+      "version": "앱 버전 0.2.1",
       "evaluate": "앱 평가하기",
       "evaluationTitle": "앱 평가",
       "evaluationText": "아직 마켓, 스토어 배포 전입니다",
@@ -186,8 +186,7 @@
     },
     "LanguageScreen": {
       "header": "언어 설정",
-      "primary": "사용 언어",
-      "others": "추가 언어",
+      "use": "사용 언어",
       "all": "모든 언어",
       "korean": "한글",
       "english": "English",
