implementing removing language

--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -12,6 +12,7 @@
     "save": "Save",
     "close": "Close",
     "erase": "Remove",
+    "remove": "Remove",
     "unknownLocation": "Unknown",
     "askTab": "Help",
     "chatTab": "Chats",
