--- a/app/src/i18n/ko.json
+++ b/app/src/i18n/ko.json
@@ -12,6 +12,7 @@
     "save": "저장",
     "close": "닫기",
     "erase": "지우기",
+    "remove": "삭제",
     "unknownLocation": "알수없음",
     "askTab": "도움요청",
     "chatTab": "채팅",
