--- a/app/src/i18n/ko.json
+++ b/app/src/i18n/ko.json
@@ -171,8 +171,6 @@
       "links": "바로가기",
       "app": "앱 설정 (위치, 알림 등)",
       "language": "언어 설정",
-      "languageTitle": "언어 변경",
-      "languageText": "언어 선택",
       "shareTitle": "앱 다운로드",
       "version": "앱 버전 0.2.1",
       "evaluate": "앱 평가하기",
@@ -192,6 +190,10 @@
       "korean": "한글",
       "english": "English",
       "add": "언어 추가",
+      "language": "언어 설정",
+      "languageTitle": "언어 삭제",
+      "languageText": "선택한 언어를 삭제하시겠습니까?",
+      "languageError": "모든 언어를 삭제할 수 없습니다",
     },
     "LanguageAddScreen": {
       "header": "언어 추가",
