--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -191,6 +191,10 @@
       "korean": "Korean",
       "english": "English",
       "add": "Add Language",
+      "language": "Language Setting",
+      "languageTitle": "Remove Language",
+      "languageText": "Remove the selected language?",
+      "languageError": "At least one language is required.",
     },
     "LanguageAddScreen": {
       "header": "Add Language",
