finally implemented language setting

--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -166,6 +166,7 @@
       "facebookGroup": "Help Stories",
       "naverCafe": "etainclub (for Korean)",
       "github": "See Source Code",
+      "terms": "Privacy and Policy",
       "setting": "Settings",
       "links": "Links",
       "app": "App Settings (permission, notification, etc)",
