now notification delivers only to users using the same language
- modified the firestore functions
  - when used where("array-contain") when querying caused crediential
error. it seems to use some kind of google service..
  - instead, just check languages in user's doc field.
- when newly signin, user's primary language is saved in db

--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -192,7 +192,7 @@
       "korean": "Korean",
       "english": "English",
       "add": "Add Language",
-      "language": "Language Setting",
+      "language": "Languages",
       "languageTitle": "Remove Language",
       "languageText": "Remove the selected language?",
       "languageError": "At least one language is required.",
