implementing do not disturb time
displayed extra list for this

--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -169,12 +169,12 @@
       "terms": "Privacy and Policy",
       "setting": "Settings",
       "links": "Links",
-      "app": "App Settings (permission, notification, etc)",
+      "donotdisturb": "Do not disturb time",
       "language": "Languages",
       "languageTitle": "Languages",
       "languageText": "Select lanugage",
       "shareTitle": "Download App",
-      "version": "App Version 0.2.1",
+      "app": "App Settings",
       "evaluate": "Evaluate App",
       "evaluationTitle": "App Evaluation",
       "evaluationText": "Coming soon",
