--- a/app/src/i18n/ko.json
+++ b/app/src/i18n/ko.json
@@ -169,10 +169,10 @@
       "terms": "이용약관 및 개인정보 보호 정책",
       "setting": "설정",
       "links": "바로가기",
-      "app": "앱 설정 (위치, 알림 등)",
+      "donotdisturb": "방해금지 시간설정",
       "language": "언어 설정",
       "shareTitle": "앱 다운로드",
-      "version": "앱 버전 0.2.1",
+      "app": "앱 설정",
       "evaluate": "앱 평가하기",
       "evaluationTitle": "앱 평가",
       "evaluationText": "아직 마켓, 스토어 배포 전입니다",
