--- a/app/src/i18n/ko.json
+++ b/app/src/i18n/ko.json
@@ -171,6 +171,8 @@
       "links": "바로가기",
       "donotdisturb": "방해금지 시간설정",
       "dndTimeTitle": "방해금지 시간",
+      "startDNDTime": "시작 ",
+      "endDNDTime": "종료 ",
       "dndTimeText": "시작 시각을 누르고 이어서 종료 시각을 누르세요", 
       "language": "언어 설정",
       "shareTitle": "앱 다운로드",
