updated english translation

--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -169,7 +169,10 @@
       "terms": "Privacy and Policy",
       "setting": "Settings",
       "links": "Links",
-      "donotdisturb": "Do not disturb time",
+      "donotdisturb": "Do Not Disturb Time",
+      "dndTimeTitle": "DND Time",
+      "startDNDTime": "Start ",
+      "endDNDTime": "End ",
       "language": "Languages",
       "languageTitle": "Languages",
       "languageText": "Select lanugage",
